# raggamuffin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/raggamuffin/: __init__.py  handlers.py  main.py  models.py  types.py
src/raggamuffin/models/: __init__.py  base.py  chunk.py  document.py  document_set.py  entity.py  event.py  reference.py
templates/: document_headers.jinja  document_set.jinja  image.jinja  meeting.jinja  message.jinja  text_document.jinja
